--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 
 <app-header [childVal]="parentVlaue" (setname)="getName()"></app-header>
 <app-sidebar></app-sidebar>
+<div class="content-wrapper" style="min-height: 1244.06px;">
 <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
