--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,8 +11,11 @@
       <li class="nav-item d-none d-sm-inline-block">
         <a href="index3.html" class="nav-link">Home</a>
       </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Contact</a>
+      <li class="nav-item d-none d-sm-inline-block" *ngIf="!isloggedIn">
+        <a href="#" class="nav-link" routerLink='/login'>Login</a>
+      </li>
+      <li class="nav-item d-none d-sm-inline-block" *ngIf="isloggedIn">
+        <a href="#" class="nav-link"  (click)="logout($event)">Logout</a>
       </li>
     </ul>
 
