--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,9 @@
 <section class="content">
     <div class="container-fluid">
 
-        <div class="row">
-            <div class="col-md-6">
+        <div class="row pt5">
+          <div class="col-md-4"></div>
+            <div class="col-md-4">
                 <div class="card card-primary">
                     <div class="card-header">
                       <h3 class="card-title">Login</h3>
@@ -28,6 +29,7 @@
                     </form>
                   </div>
             </div>
+            <div class="col-md-4"></div>
         </div>
     
     </div>
