--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,8 @@
       
                       <div class="card-footer">
                         <button type="submit" class="btn btn-primary">Submit</button>
-                      </div>
+                        <button class="btn btn-primary"><a routerLink="/singup" style="color: blanchedalmond;">SignUp</a></button>
+                      </div> 
                     </form>
                   </div>
             </div>
